Some chages in index.html file

--- a/index.html
+++ b/index.html
@@ -1,37 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello People</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque voluptates consequatur odio ducimus minus, sint itaque ratione architecto eaque ipsum.
-    Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit nam! Sequi.
-    Soluta dolores porro non debitis delectus doloribus. Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores qui ut molestias at ipsa sapiente similique adipisci ullam laudantium culpa animi aut nemo perspiciatis!
-    Velit, adipisci quam quos eius voluptates aspernatur dolore error nisi consectetur impedit repellat provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium repellat voluptates dolor fuga nam unde consectetur voluptatem?
-    Tempore libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta ducimus vero autem, tenetur sequi ipsa ipsum.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque voluptates consequatur odio ducimus minus, sint itaque ratione architecto eaque ipsum.
-    Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit nam! Sequi.
-    Soluta dolores porro non debitis delectus doloribus. Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores qui ut molestias at ipsa sapiente similique adipisci ullam laudantium culpa animi aut nemo perspiciatis!
-    Velit, adipisci quam quos eius voluptates aspernatur dolore error nisi consectetur impedit repellat provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium repellat voluptates dolor fuga nam unde consectetur voluptatem?
-    Tempore libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta ducimus vero autem, tenetur sequi ipsa ipsum.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque voluptates consequatur odio ducimus minus, sint itaque ratione architecto eaque ipsum.
-    Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit nam! Sequi.
-    Soluta dolores porro non debitis delectus doloribus. Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores qui ut molestias at ipsa sapiente similique adipisci ullam laudantium culpa animi aut nemo perspiciatis!
-    Velit, adipisci quam quos eius voluptates aspernatur dolore error nisi consectetur impedit repellat provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium repellat voluptates dolor fuga nam unde consectetur voluptatem?
-    Tempore libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta ducimus vero autem, tenetur sequi ipsa ipsum.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque voluptates consequatur odio ducimus minus, sint itaque ratione architecto eaque ipsum.
-    Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit nam! Sequi.
-    Soluta dolores porro non debitis delectus doloribus. Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores qui ut molestias at ipsa sapiente similique adipisci ullam laudantium culpa animi aut nemo perspiciatis!
-    Velit, adipisci quam quos eius voluptates aspernatur dolore error nisi consectetur impedit repellat provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium repellat voluptates dolor fuga nam unde consectetur voluptatem?
-    Tempore libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta ducimus vero autem, tenetur sequi ipsa ipsum.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque voluptates consequatur odio ducimus minus, sint itaque ratione architecto eaque ipsum.
-    Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit nam! Sequi.
-    Soluta dolores porro non debitis delectus doloribus. Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores qui ut molestias at ipsa sapiente similique adipisci ullam laudantium culpa animi aut nemo perspiciatis!
-    Velit, adipisci quam quos eius voluptates aspernatur dolore error nisi consectetur impedit repellat provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium repellat voluptates dolor fuga nam unde consectetur voluptatem?
-    Tempore libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta ducimus vero autem, tenetur sequi ipsa ipsum.</p>
-</body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero
+      itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque
+      voluptates consequatur odio ducimus minus, sint itaque ratione architecto
+      eaque ipsum. Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt
+      eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam
+      facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit
+      nam! Sequi. Soluta dolores porro non debitis delectus doloribus.
+      Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores
+      qui ut molestias at ipsa sapiente similique adipisci ullam laudantium
+      culpa animi aut nemo perspiciatis! Velit, adipisci quam quos eius
+      voluptates aspernatur dolore error nisi consectetur impedit repellat
+      provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium
+      repellat voluptates dolor fuga nam unde consectetur voluptatem? Tempore
+      libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos
+      deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta
+      ducimus vero autem, tenetur sequi ipsa ipsum.
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero
+      itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque
+      voluptates consequatur odio ducimus minus, sint itaque ratione architecto
+      eaque ipsum. Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt
+      eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam
+      facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit
+      nam! Sequi. Soluta dolores porro non debitis delectus doloribus.
+      Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores
+      qui ut molestias at ipsa sapiente similique adipisci ullam laudantium
+      culpa animi aut nemo perspiciatis! Velit, adipisci quam quos eius
+      voluptates aspernatur dolore error nisi consectetur impedit repellat
+      provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium
+      repellat voluptates dolor fuga nam unde consectetur voluptatem? Tempore
+      libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos
+      deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta
+      ducimus vero autem, tenetur sequi ipsa ipsum.
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero
+      itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque
+      voluptates consequatur odio ducimus minus, sint itaque ratione architecto
+      eaque ipsum. Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt
+      eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam
+      facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit
+      nam! Sequi. Soluta dolores porro non debitis delectus doloribus.
+      Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores
+      qui ut molestias at ipsa sapiente similique adipisci ullam laudantium
+      culpa animi aut nemo perspiciatis! Velit, adipisci quam quos eius
+      voluptates aspernatur dolore error nisi consectetur impedit repellat
+      provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium
+      repellat voluptates dolor fuga nam unde consectetur voluptatem? Tempore
+      libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos
+      deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta
+      ducimus vero autem, tenetur sequi ipsa ipsum.
+    </p>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </body>
 </html>
