--- a/index.html
+++ b/index.html
@@ -69,5 +69,12 @@
       <li></li>
       <li></li>
     </ul>
+
+    <form action="">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name">
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email">
+    </form>
   </body>
 </html>
