--- a/index.html
+++ b/index.html
@@ -7,67 +7,68 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello People</h1>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero
-      itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque
-      voluptates consequatur odio ducimus minus, sint itaque ratione architecto
-      eaque ipsum. Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt
-      eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam
-      facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit
-      nam! Sequi. Soluta dolores porro non debitis delectus doloribus.
-      Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores
-      qui ut molestias at ipsa sapiente similique adipisci ullam laudantium
-      culpa animi aut nemo perspiciatis! Velit, adipisci quam quos eius
-      voluptates aspernatur dolore error nisi consectetur impedit repellat
-      provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium
-      repellat voluptates dolor fuga nam unde consectetur voluptatem? Tempore
-      libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos
-      deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta
-      ducimus vero autem, tenetur sequi ipsa ipsum.
-    </p>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero
-      itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque
-      voluptates consequatur odio ducimus minus, sint itaque ratione architecto
-      eaque ipsum. Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt
-      eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam
-      facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit
-      nam! Sequi. Soluta dolores porro non debitis delectus doloribus.
-      Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores
-      qui ut molestias at ipsa sapiente similique adipisci ullam laudantium
-      culpa animi aut nemo perspiciatis! Velit, adipisci quam quos eius
-      voluptates aspernatur dolore error nisi consectetur impedit repellat
-      provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium
-      repellat voluptates dolor fuga nam unde consectetur voluptatem? Tempore
-      libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos
-      deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta
-      ducimus vero autem, tenetur sequi ipsa ipsum.
-    </p>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique vero
-      itaque sapiente atque! Aliquid itaque repudiandae soluta! Nihil neque
-      voluptates consequatur odio ducimus minus, sint itaque ratione architecto
-      eaque ipsum. Quis voluptatibus aperiam animi eveniet, rem nam. Nesciunt
-      eaque neque fuga veniam nemo sed temporibus quasi, praesentium laboriosam
-      facilis quia, ea doloremque consectetur rem non amet blanditiis, suscipit
-      nam! Sequi. Soluta dolores porro non debitis delectus doloribus.
-      Quibusdam, odit harum voluptatem doloremque illo, temporibus asperiores
-      qui ut molestias at ipsa sapiente similique adipisci ullam laudantium
-      culpa animi aut nemo perspiciatis! Velit, adipisci quam quos eius
-      voluptates aspernatur dolore error nisi consectetur impedit repellat
-      provident, cum laudantium quae ex recusandae? Natus, nesciunt! Praesentium
-      repellat voluptates dolor fuga nam unde consectetur voluptatem? Tempore
-      libero enim omnis numquam excepturi, fugit ullam eius, ea sapiente eos
-      deserunt! Sunt id esse quo illum neque enim laboriosam nostrum soluta
-      ducimus vero autem, tenetur sequi ipsa ipsum.
-    </p>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <header>
+      <h1>Logo</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact us</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+            velit natus quam ipsum debitis accusamus quo illo aspernatur, ut
+            corrupti minima placeat quaerat ratione ex! Mollitia aspernatur
+            eligendi iure cumque! Tempora nihil autem distinctio facere aperiam
+            consectetur dicta, fugit natus in delectus magni dolores, aut
+            recusandae inventore harum sint veniam sit numquam beatae
+            consequuntur praesentium suscipit ullam. Aliquid, distinctio. Quasi.
+            Optio quia ipsam amet, dolore excepturi odit voluptatem velit id
+            harum minus repellat iure quidem commodi totam officia eum quas rem
+            neque aut veniam cupiditate suscipit iusto, officiis eveniet. Rerum.
+            Deleniti ipsam hic voluptates laboriosam doloribus neque provident,
+            natus placeat minus minima, nesciunt fuga inventore saepe
+            perferendis eos! Doloremque nemo ullam odit tempore, nostrum rem
+            consectetur hic facere quidem rerum! Corporis incidunt atque odio
+            et, fugit iure officiis magnam at, aperiam voluptatum eum. Mollitia
+            quo eveniet animi quaerat dicta magni ducimus omnis eaque velit nam.
+            Eaque voluptate distinctio laboriosam ad? Dolores officia
+            reprehenderit inventore. Voluptas corrupti repellat debitis
+            molestiae eos facilis quam nihil nulla! Obcaecati, quia illum ipsa
+            inventore aperiam officiis blanditiis velit vel corporis aliquam,
+            nihil ex suscipit culpa. Sit placeat nemo dicta praesentium aut,
+            nobis blanditiis ut, rerum quos voluptatum minima consequuntur
+            ullam? Quo laborum nostrum dignissimos sit, quisquam consequuntur
+            nemo magnam qui dicta repudiandae ex harum quasi? Voluptas tempora
+            provident dolor maxime obcaecati nihil ratione sunt, quae quos
+            aliquid harum a. Quae quia, veniam quos ea, possimus tempora maxime
+            at, ex accusamus molestiae omnis doloremque dolore laudantium? Culpa
+            blanditiis iure itaque, est adipisci beatae ipsam quos quasi quas
+            repudiandae reprehenderit, numquam incidunt! Quaerat, maxime magni
+            possimus culpa obcaecati iste illum voluptatibus quae ut, deserunt
+            voluptas quam hic! Exercitationem delectus ea reprehenderit expedita
+            ullam quasi omnis optio. Nemo ducimus sed, fugit ipsum quia
+            dignissimos animi eius ad. Praesentium ipsam itaque, voluptates
+            illum laudantium provident esse harum repellendus ratione.
+          </p>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright all rights reserved</p>
+      <ul>
+        <li><a href="#">icon1</a></li>
+        <li><a href="#">icon2</a></li>
+        <li><a href="#">icon3</a></li>
+        <li><a href="#">icon4</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
